convert nexus scan tests to use JUnit 5
Change-Id: Ib5487103be544d66b50ce35b832304a1b927e6e7